# sevae

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/sevae/: __init__.py
src/sevae/models/: sevae.py
tests/: test_smoke.py
